[package]
name = "democracy-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }
[dependencies]
poise = "0.6.1"
env_logger = "0.11.5"
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
